# electron

./: main.js  package.json
webautomate/: pyproject.toml
