[tool.poetry]
name = "webautomate_ai"
version = "0.1.0"
description = ""
authors = ["Ankit Patidar"]

packages = [
    { include = "webautomate_ai" }
]

readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "browser-use (>=0.4.4,<0.5.0)",
    "playwright (>=1.53.0,<2.0.0)",
    "google-generativeai (>=0.8.5,<0.9.0)",
    "httpx (>=0.28.1,<0.29.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
